Fix style sheet so that links bar does not wrap in Webkit-based browsers. Add favorites to help page. Add RequestContext to pages that don't already have it (help, speech page, etc).

--- a/trunk/aenclave/styles/base.css
+++ b/trunk/aenclave/styles/base.css
@@ -64,7 +64,7 @@ div.links {
     margin: 0px auto 6px;
     padding: 2px 0px 1px;
     text-align: center;
-    width: 395px;
+    width: 420px;
 }
 
 div.links a {
